--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/selbekk/car-registry",
   "dependencies": {
     "express": "^4.12.3",
-    "express-handlebars": "^1.2.2"
+    "express-handlebars": "^1.2.2",
+    "mysql": "^2.5.5",
+    "underscore": "^1.8.2"
   }
 }
