--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/selbekk/car-registry",
   "dependencies": {
+    "body-parser": "^1.12.2",
     "express": "^4.12.3",
     "express-handlebars": "^1.2.2",
     "morgan": "^1.5.2",
