--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-handlebars": "^1.2.2",
     "morgan": "^1.5.2",
     "mysql": "^2.5.5",
+    "promise": "^6.1.0",
     "underscore": "^1.8.2"
   }
 }
